err/typepadapp-moderation.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/moderation'...
Compiling './lib/python3.5/site-packages/moderation/ajax.py'...
***   File "./lib/python3.5/site-packages/moderation/ajax.py", line 97
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/moderation/static'...
Listing './lib/python3.5/site-packages/moderation/static/css'...
Listing './lib/python3.5/site-packages/moderation/static/images'...
Listing './lib/python3.5/site-packages/moderation/static/js'...
Listing './lib/python3.5/site-packages/moderation/templates'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/assets'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/assets/bits'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/assets/body'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/base'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/base/bits'...
Listing './lib/python3.5/site-packages/moderation/templates/moderation/bits'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/typepadapp_moderation-1.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
